appId: com.layerzwallet.mobile
---
- runFlow: subflows/wallet-creation.yml

# Navigate to Settings
- tapOn:
    id: 'SettingsButton'

# Scroll to the bottom to find the Tools button
- scrollUntilVisible:
    element:
      id: 'ToolsButton'
    direction: DOWN
    centerElement: true
- waitForAnimationToEnd

# Navigate to Tools
- tapOn:
    id: 'ToolsButton'
- waitForAnimationToEnd

# Scroll to find the self test button
- scrollUntilVisible:
    element:
      id: 'RunSelfTestButton'
    direction: DOWN
    centerElement: true
- waitForAnimationToEnd

# Run the self test
- tapOn:
    id: 'RunSelfTestButton'
- waitForAnimationToEnd

# Wait for success message
- extendedWaitUntil:
    visible:
      id: 'SelfTestSuccess'
    timeout: 59000
